--- a/app/src/main/res/layout/activity_book_details_view.xml
+++ b/app/src/main/res/layout/activity_book_details_view.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/index"
+            android:src="@drawable/book"
             />
         <LinearLayout
             android:id="@+id/lvBookNameContainer"
