--- a/app/src/main/res/layout/grid_view_content.xml
+++ b/app/src/main/res/layout/grid_view_content.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/index"
+        android:src="@drawable/book"
         android:id="@+id/bookImg" />
 
     <TextView
