--- a/app/src/main/res/layout/activity_book_details_view.xml
+++ b/app/src/main/res/layout/activity_book_details_view.xml
@@ -40,7 +40,7 @@
                 android:layout_marginTop="7dp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:text="Let Us C"
+                android:text="Loading ...."
                 android:textSize="20dp"
                 />
         </LinearLayout>
@@ -70,7 +70,7 @@
                 android:layout_marginTop="7dp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:text="Harbert Shilt"
+                android:text="Loading ...."
                 android:textSize="20dp"
                 />
         </LinearLayout>
@@ -98,7 +98,7 @@
                 android:layout_marginTop="7dp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:text="2015"
+                android:text="Loading ...."
                 android:textSize="20dp"
                 />
         </LinearLayout>
@@ -127,7 +127,7 @@
                 android:layout_marginTop="7dp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:text="McGRAW- Hill"
+                android:text="Loading ...."
                 android:textSize="20dp"
                 />
         </LinearLayout>
@@ -155,11 +155,20 @@
                 android:layout_marginTop="7dp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:text="Programming book"
+                android:text="Loading ...."
                 android:textSize="15dp"
                 />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/download"
+            android:text="Download"
+            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:textSize="10sp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
+
 </ScrollView>
