--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,16 @@
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+        android:paddingBottom="35dp"
+        tools:context=".MainActivity"
+
+        android:id="@+id/lin_lay">
 
         <GridView
             android:id="@+id/gridView"
@@ -26,7 +31,7 @@
             android:verticalSpacing="10dp"
             android:numColumns="auto_fit"
             tools:listitem="@layout/grid_view_content"
-            >
+            android:layout_above="@+id/total">
 
         </GridView>
 
@@ -38,29 +43,6 @@
             android:layout_centerHorizontal="true"
             android:textSize="20sp"
             />
-
-        <Button
-            android:id="@+id/previous"
-            android:text="Previous"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_width="wrap_content"
-            android:textSize="10sp"
-            android:layout_centerHorizontal="true"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/next"
-            android:text="Next"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:textSize="10sp"
-            android:layout_centerHorizontal="true"
-            android:layout_height="wrap_content" />
-
-
-
 
     </RelativeLayout>
 
