--- a/app/src/main/res/layout/grid_view_content.xml
+++ b/app/src/main/res/layout/grid_view_content.xml
@@ -6,6 +6,7 @@
     android:layout_margin="10dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
+    android:padding="2dp"
     android:gravity="center">
 
 
