--- a/app/src/main/res/layout/books_grid.xml
+++ b/app/src/main/res/layout/books_grid.xml
@@ -28,7 +28,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton"
+            android:id="@+id/pre"
             android:src="@drawable/pre"
             android:background="@null"
             android:padding="8dp"
@@ -39,7 +39,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton2"
+            android:id="@+id/next"
             android:src="@drawable/next"
             android:background="@null"
             android:padding="8dp"
