--- a/app/src/main/res/menu/menu_book_details_view.xml
+++ b/app/src/main/res/menu/menu_book_details_view.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.fahim.ebookdl.BookDetailsView">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_download" android:title="@string/action_download"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
