--- a/app/src/main/res/layout/details_view.xml
+++ b/app/src/main/res/layout/details_view.xml
@@ -37,7 +37,8 @@
                 android:layout_height="wrap_content"
                 android:text="Title"
                 android:id="@+id/titleLebel"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,7 +52,8 @@
                 android:layout_height="wrap_content"
                 android:text="Author"
                 android:id="@+id/authorLabel"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -65,7 +67,8 @@
                 android:layout_height="wrap_content"
                 android:text="ISBN"
                 android:id="@+id/isbnlvl"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -79,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:text="Year"
                 android:id="@+id/textView"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -103,7 +107,8 @@
             android:layout_height="wrap_content"
             android:text="Description"
             android:padding="10dp"
-            android:id="@+id/textView2" />
+            android:id="@+id/textView2"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
